# doplar

./: Cargo.toml  README.md  upstream.patch
benches/: speed_tests.rs
doplar/: LICENSE  README.md
doplar/benches/: speed_tests.rs
doplar/src/: testing.rs
doplar/src/upstream/: mod.rs
src/: dflp.rs  lib.rs  vidpf.rs
src/upstream/: testing.rs
