# Copyright (c) 2023 Cloudflare, Inc. All rights reserved.

[package]
name = "doplar"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
getrandom = { version = "0.2.8", features = ["std"] }
prio = { git = "https://github.com/divviup/libprio-rs", rev = "0d3db3b5b62005a2fb28b40237ffd0f888399b62", features = ["experimental"] }
rand = "0.8.5"
rayon = "1.6.1"
sha3 = "0.10.6"
subtle = "2.4.1"
zipf = "7.0.0"

[dev-dependencies]
bitvec = "1.0.1"
criterion = "0.4"
tokio = { version = "1.23.0", features = ["full"] }

[[bench]]
name = "speed_tests"
harness = false
